# parallel-nqueens-problem-tim

./: .gitignore  CMakeLists.txt  Coord.h  Dot.h  README.md  graph.dot  main.cpp  queenpath.h  queens.cpp  reinas.cpp  solutions.txt  test.cpp
